--- a/src/components/Asap.css
+++ b/src/components/Asap.css
@@ -3,12 +3,16 @@
 
 /*Typography
 --------------------------------------------------------------*/
-body,
+body{
+  background-image: url('https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/pf-s104-0372-kqhto1n7.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=a39e0ab055449069efcb39183f9c04f6');
+  background-repeat: no-repeat;
+  background-size: cover;
+};
 button,
 input,
 select,
 textarea {
-  color: #404040;
+  color: white;
   font-family: "Comfortaa", Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
