--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -33,7 +33,7 @@ fieldset {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #495057;
+    color: #3787d7;
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #ced4da;
